Sat Dec 15 21:23:49 CET 2007 Christian Anthon <anthon@kiku.dk>

	* board3d/gtkcolour3d.c: remove unneeded gdk_gl_drawable_begin calls since
	they causes assertions on newer X window.

Thu Dec 13 22:39:56 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, backgammon.h, bearoff.c, bearoff.h, bearoffdump.c,
	drawboard.c, drawboard.h, gnubg.c, gtkrolls.c, makebearoff.c,
	makehyper.c, multithread.c, positionid.c, positionid.h, render.h,
	rollout.c, sgf.y, util.c, util.h, lib/gnubg-types.h: fixes to make
	gnubg compile after Jon's changes. board3d doesn't compile. utility
	programs doesn't compile.

Wed Dec 12 23:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>
	* movelistctrl: Fix spacing in German (reported by Thomas Steiner)
	* bearoff.c: Fix multithreaded disk bearoff access (reported by Hugh Sconyers)
	* list.h + others: list type renamed to listOLD (ideally replace with glist in future)

Wed Dec 12 15:40:08 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, gnubg.6: manual now maintained in doc

Wed Dec 12 13:52:14 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, board3d/Makefile.am, doc/Makefile.am, lib/Makefile.am,
	m4/Makefile.am, met/Makefile.am, po/POTFILES.in: cleanup and fixes to
	make distcheck

Wed Nov 28 09:43:59 CET 2007 Christian Anthon <anthon@kiku.dk>

	* po/POTFILES.in: remove pub_eval.c
	* doc/Makefile.am: remove *.txt from EXTRA_DIST

Sun Nov 25 12:09:04 CET 2007 Christian Anthon <anthon@kiku.dk>

	* import.c: fix partygammon import. Games terminated badly.

Sun Nov 18 07:04:44 CET 2007 Christian Anthon <anthon@kiku.dk>

	* eval.c, makebearoff.c: Fix messed up evaluation of hypergammon.
	Redirect loading of hyper databases to pkgdir.

Sat Nov 17 11:27:28 CET 2007 Christian Anthon <anthon@kiku.dk>

	* eval.c eval.h gnubg.c lib/neuralnet.c lib/neuralnet.h: cleanup
	neuralnet.[ch]

Fri Nov 16 23:24:02 CET 2007 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gtkchequer.h, gtkgame.c, gtkgame.h, gtkpanels.c,