@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: makebearoff.c,v 1.53 2007/12/13 21:43:44 c_anthon Exp $
+ * $Id: makebearoff.c,v 1.54 2007/12/15 20:36:57 c_anthon Exp $
  */
 
 #include "config.h"
@@ -1433,9 +1433,9 @@ generate_ts ( const int nTSP, const int nTSC,
 static void
 version ( void ) {
 #ifndef WIN32
-  printf ( "makebearoff $Revision: 1.53 $\n" );
+  printf ( "makebearoff $Revision: 1.54 $\n" );
 #else
-  MessageBox( NULL, "makebearoff $Revision: 1.53 $\n", "Makebearoff", MB_OK );
+  MessageBox( NULL, "makebearoff $Revision: 1.54 $\n", "Makebearoff", MB_OK );
 #endif
 }
 
@@ -1565,7 +1565,7 @@ extern int main( int argc, char **argv ) {
     dlgprintf( 123, "%d", nHashSize);
     dlgprintf( 124, "%s", szOldBearoff ? "yes" : "no");
     dlgprintf(130, "Generating one-sided bearoff database. Please wait." );
-    dlgprintf(131, "makebearoff $Revision: 1.53 $" );
+    dlgprintf(131, "makebearoff $Revision: 1.54 $" );
 #else
     fprintf ( stderr, 
               _("One-sided database:\n"
@@ -1693,7 +1693,7 @@ extern int main( int argc, char **argv ) {
     dlgprintf(125, "" );
     dlgprintf(126, "" );
     dlgprintf(130, "Generating two-sided bearoff database. Please wait." );
-    dlgprintf(131, "makebearoff $Revision: 1.53 $" );
+    dlgprintf(131, "makebearoff $Revision: 1.54 $" );
 #else 
     fprintf ( stderr,
               _("Two-sided database:\n"
@@ -1792,24 +1792,3 @@ DlgProc (HWND hwnd, UINT Message, WPARAM wParam, LPARAM lParam){
    return FALSE;
 }
 #endif
-
-extern void MT_Lock(long *lock)
-{
-}
-
-extern void MT_Unlock(long *lock)
-{
-}
-
-extern int MT_GetThreadID(void)
-{
-  return (0);
-}
-
-extern void MT_Exclusive(void)
-{
-}
-
-extern void MT_Release(void)
-{
-}
