@@ -130,7 +130,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: external_y.c,v 1.5 2007/10/24 15:18:36 c_anthon Exp $
+ * $Id: external_y.c,v 1.6 2007/12/15 20:36:58 c_anthon Exp $
  */
 
 #include "config.h"
