@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: relational.c,v 1.37 2007/12/12 23:08:19 Superfly_Jon Exp $
+ * $Id: relational.c,v 1.38 2007/12/15 20:36:57 c_anthon Exp $
  */
 
 #include "config.h"
@@ -28,6 +28,7 @@
 #if USE_GTK
 #include "gtkgame.h"
 #include "gtkwindows.h"
+#include "gtkrelational.h"
 #endif
 
 #include <stdio.h>
